hide generation code in another notebooks so this main one is left with the user interface (as simple as possible)

--- a/generator/multipleSelectorCheckboxesWidget.ipynb
+++ b/generator/multipleSelectorCheckboxesWidget.ipynb
@@ -131,6 +131,31 @@
      "name": "#%%\n"
     }
    }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "**Multi checkboxes selector** for verbs and types"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "class GeneratorMultiCheckboxWidget(MultiCheckboxWidget):\n",
+    "    def update(self):\n",
+    "        pass"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
