--- a/generator/saveData/selectFileWidget.ipynb
+++ b/generator/saveData/selectFileWidget.ipynb
@@ -26,6 +26,37 @@
    "cell_type": "code",
    "execution_count": 1,
    "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Adapted from : https://gist.github.com/DrDub/6efba6e522302e43d055\n",
+    "\n",
+    "# example usage:\n",
+    "   f = FileBrowser()\n",
+    "\n",
+    "   f.widget()\n",
+    "\n",
+    "   <interact with widget, select a path>\n",
+    "\n",
+    "# in a separate cell:\n",
+    "   f.path # returns the selected path"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import os\n",
     "\n",
@@ -36,21 +67,17 @@
     "        self.layoutButtons = widgets.Layout(width='auto')\n",
     "\n",
     "    def _update_files(self):\n",
-    "        self.files = list()\n",
     "        self.dirs = list()\n",
-    "        if(os.path.isdir(self.path)):\n",
-    "            for f in os.listdir(self.path):\n",
-    "                ff = os.path.join(self.path, f)\n",
-    "                if os.path.isdir(ff):\n",
-    "                    self.dirs.append(f)\n",
-    "                else:\n",
-    "                    self.files.append(f)\n",
-    "        \n",
+    "        for f in os.listdir(self.path):\n",
+    "            ff = os.path.join(self.path, f)\n",
+    "            if os.path.isdir(ff):\n",
+    "                self.dirs.append(f)\n",
+    "\n",
     "    def widget(self):\n",
     "        box = widgets.VBox()\n",
     "        self._update(box)\n",
     "        return box\n",
-    "    \n",
+    "\n",
     "    def _update(self, box):\n",
     "        def on_click(b):\n",
     "            if b.description == '..':\n",
@@ -59,16 +86,16 @@
     "                self.path = os.path.join(self.path, b.description)\n",
     "            self._update_files()\n",
     "            self._update(box)\n",
-    "        \n",
+    "\n",
     "        buttons = []\n",
-    "        if self.files:\n",
-    "            button = widgets.Button(description='..', background_color='#d0d0ff', layout=self.layoutButtons)\n",
-    "            button.on_click(on_click)\n",
-    "            buttons.append(button)\n",
-    "        for f in self.dirs:\n",
-    "            button = widgets.Button(description=f, background_color='#d0d0ff', layout=self.layoutButtons)\n",
-    "            button.on_click(on_click)\n",
-    "            buttons.append(button)\n",
+    "        button = widgets.Button(description='..', background_color='#d0d0ff', layout=self.layoutButtons)\n",
+    "        button.on_click(on_click)\n",
+    "        buttons.append(button)\n",
+    "        if os.path.isdir(self.path):\n",
+    "            for f in self.dirs:\n",
+    "                button = widgets.Button(description=f, background_color='#d0d0ff', layout=self.layoutButtons)\n",
+    "                button.on_click(on_click)\n",
+    "                buttons.append(button)\n",
     "        box.children = tuple([widgets.HTML(\"<h4>%s</h4>\" % (self.path,))] + buttons)"
    ],
    "metadata": {
