Fix response generator for alternatives

--- a/generator/AlternativeGenerator.ipynb
+++ b/generator/AlternativeGenerator.ipynb
@@ -106,16 +106,20 @@
     "        statement=generator(randomPlayer, randomVerb, randomType,randomID, time)\n",
     "        if randomType not in checkAnswer.keys():\n",
     "            checkAnswer[randomType]={}\n",
-    "        if randomID not in checkAnswer[randomType].keys():\n",
-    "            checkAnswer[randomType][randomID]=str(uuid.uuid4())\n",
-    "        if randomType==\"alternative\":\n",
-    "            result=copy.deepcopy(template_result_alternative_response)\n",
-    "            sucess=random.choice([True, False])\n",
-    "            if sucess:\n",
-    "                result[\"response\"]=checkAnswer[randomType][randomID]\n",
-    "            else:\n",
+    "        if randomType==\"alternative\" and randomVerb==\"selected\":\n",
+    "            if randomID not in checkAnswer[randomType].keys():\n",
+    "                checkAnswer[randomType][randomID]=[]\n",
+    "                resultTrue=copy.deepcopy(template_result_alternative_response)\n",
+    "                resultTrue[\"response\"]=str(uuid.uuid4())\n",
+    "                resultTrue[\"success\"]=\"True\"\n",
+    "                checkAnswer[randomType][randomID].append(resultTrue)\n",
+    "                checkAnswer[randomType][randomID].append(\"custom\")\n",
+    "            result=random.choice(checkAnswer[randomType][randomID])\n",
+    "            if result==\"custom\":\n",
+    "                result=copy.deepcopy(template_result_alternative_response)\n",
     "                result[\"response\"]=str(uuid.uuid4())\n",
-    "            result[\"success\"]=sucess\n",
+    "                result[\"success\"]=\"False\"\n",
+    "                checkAnswer[randomType][randomID].append(result)\n",
     "            statement[\"result\"]=result\n",
     "        statements.append(statement)\n",
     "    if change==None:\n",
