Fix Menus Selected Generation

--- a/generator/AlternativeGenerator.ipynb
+++ b/generator/AlternativeGenerator.ipynb
@@ -106,7 +106,7 @@
     "        statement=generator(randomPlayer, randomVerb, randomType,randomID, time)\n",
     "        if randomType not in checkAnswer.keys():\n",
     "            checkAnswer[randomType]={}\n",
-    "        if randomType==\"alternative\" and randomVerb==\"selected\":\n",
+    "        if randomVerb==\"selected\":\n",
     "            if randomID not in checkAnswer[randomType].keys():\n",
     "                checkAnswer[randomType][randomID]=[]\n",
     "                resultTrue=copy.deepcopy(template_result_alternative_response)\n",
@@ -120,9 +120,12 @@
     "                result[\"response\"]=str(uuid.uuid4())\n",
     "                result[\"success\"]=\"False\"\n",
     "                checkAnswer[randomType][randomID].append(result)\n",
-    "            statement[\"result\"]=result\n",
+    "            if randomType in [\"alternative\",\"question\"]:\n",
+    "                statement[\"result\"]=result\n",
+    "            else: #menu dialog path arena\n",
+    "                statement[\"result\"]={\"response\":result[\"response\"]}\n",
     "        statements.append(statement)\n",
-    "    if change==None:\n",
+    "    if change is None :\n",
     "        return statements\n",
     "    else:\n",
     "        save_generated_data(statements, verbs, types)\n",
@@ -156,9 +159,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "name": "pycharm-831db6a3",
    "language": "python",
-   "name": "python3"
+   "display_name": "PyCharm (xapi-sg-data-generator)"
   },
   "language_info": {
    "codemirror_mode": {
