--- a/xAPISGDataGenerator.ipynb
+++ b/xAPISGDataGenerator.ipynb
@@ -33,7 +33,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": [
     "import json\n",
@@ -81,7 +85,7 @@
     "        clear_output(wait=False)\n",
     "tabs.observe(clearoutput, 'selected_index')\n",
     "\n",
-    "header=widgets.HTML(\"<h1>xAPI-SG Generatorr</h1>\"\n",
+    "header=widgets.HTML(\"<h1>xAPI-SG Generator</h1>\"\n",
     "                    \"<h2>Please select verb(s), type_object(s), number of players, numbers of IDs and numbers of traces to generate</h2>\")\n",
     "footer=widgets.HTML(\"<h4>xAPI-SG Generator, by eUCM research team</h4>\")\n",
     "app=VBox([header,\n",
@@ -98,11 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
